[tool.poetry]
name = "poetry env use 3-10-5"
version = "0.1.0"
description = ""
authors = ["Danie Marques de Almeida <danielmarques.enfermagem@gmail.com>"]
readme = "README.md"
packages = [{include = "poetry env use 3"}]

[tool.poetry.dependencies]
python = "^3.10"
ruff = "^0.5.5"
streamlit = "^1.37.0"
sqlalchemy = "^2.0.32"
python-dotenv = "^1.0.1"
psycopg2-binary = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
